# glb2xmf

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  processGLB.cpp
